# fp-homework

./: README.md  stack.yaml
.github/workflows/: haskell.yml
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hie.yaml  hw1.cabal
hw1-second-chance/: README.md  hie.yaml  hw1-second-chance.cabal
hw1-second-chance/src/Block6/: Task1.hs  Task2.hs  Task4.hs
hw1-second-chance/test/unit/: Block6Spec.hs
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/src/Block4/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/: Task1.hs  Task2.hs
hw1/src/Block6/: Task3.hs  Task4.hs
hw1/test/unit/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  Block4Spec.hs  Block5Spec.hs
hw2/: README.md
hw3/: README.md
hw3/comonad19/: comonad19.cabal
hw3/comonad19/app/: Main.hs
hw3/comonad19/src/: Grid.hs  ListZipper.hs  Virus.hs
hw3/fs-lenses/: fs-lenses.cabal  hie.yaml
hw3/fs-lenses/app/: Main.hs
hw3/fs-lenses/src/: FS.hs  Modification.hs  Practice.hs  Traversal.hs
hw3/fs-lenses/test/: ModificationSpec.hs  PracticeSpec.hs  TestData.hs  TraversalSpec.hs
hw3/geometry/: geometry.cabal
hw3/geometry/bench/: Main.hs
hw3/geometry/src/: FunctionsNaive.hs  FunctionsParallel.hs  Geometry.hs
hw3/halyavascript/: halyavascript.cabal  hie.yaml
hw3/halyavascript/app/: Main.hs
hw3/halyavascript/src/: HSExpr.hs  Interpreter.hs  Transpiler.hs
hw3/halyavascript/test/: TranspilerSpec.hs
hw3/hashtable/: hashtable.cabal  hie.yaml
hw3/hashtable/bench/: Main.hs
hw3/hashtable/src/: Hashtable.hs
hw3/hashtable/test/: HashtableSpec.hs
practice1/: README.md  practice1.cabal
practice1/app/: Main.hs
