name:                hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 1 (2nd chance)
description:         Task 1 (2nd chance) for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1-second-chance#readme
license:             MIT
license-file:        LICENSE
author:              Ilya Bizyaev
maintainer:          me@ilyabiz.com
copyright:           2020 Ilya Bizyaev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block6.Task1, Block6.Task2, Block6.Task3, Block6.Task4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite hw1-2nd-unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/unit
  main-is:             Spec.hs
  other-modules:       Block6Spec
  build-depends:       base
                     , hw1-second-chance
                     , hspec
                     , hspec-discover
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
