name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Ilya Bizyaev
maintainer:          example@example.com
copyright:           2020 Ilya Bizyaev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1, Block1.Task2, Block1.Task3
                     , Block2.Task1, Block2.Task2
                     , Block3.Task1, Block3.Task2
                     , Block4.Task1, Block4.Task2, Block4.Task3
                     , Block5.Task1, Block5.Task2
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite hw1-unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/unit
  main-is:             Spec.hs
  other-modules:       Block1Spec
                     , Block2Spec
                     , Block3Spec
                     , Block4Spec
                     , Block5Spec
  build-depends:       base
                     , hw1
                     , hspec
                     , hspec-discover
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hw1-property-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test/property
  build-depends:       base
                     , hw1
                     , hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010