cabal-version:       2.2

name:                comonad19
version:             0.1.0.0
synopsis:            Task 8
description:         Virus distribution simulation

homepage:            https://github.com/fp-ctd-itmo/hw3-IlyaBizyaev
license:             MIT
license-file:        LICENSE
author:              Ilya Bizyaev
maintainer:          me@ilyabiz.com
copyright:           2020 Ilya Bizyaev

category:            Simulation
build-type:          Simple
tested-with:         GHC == 8.6.5

common shared-properties
  build-depends: base >=4.12 && < 5
               , comonad
               , random
  ghc-options: -Wall -Werror -O2

library
  import: shared-properties
  hs-source-dirs:  src
  exposed-modules: Grid
                 , ListZipper
                 , Virus
  default-language:    Haskell2010

executable comonad19-runner
  import:              shared-properties
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       comonad19
  default-language:    Haskell2010
