cabal-version:       2.2

name:                halyavascript
version:             0.1.0.0
synopsis:            Tasks 3-4
description:         Basic script language

homepage:            https://github.com/fp-ctd-itmo/hw3-IlyaBizyaev
license:             MIT
license-file:        LICENSE
author:              Ilya Bizyaev
maintainer:          me@ilyabiz.com
copyright:           2020 Ilya Bizyaev

category:            DSL
build-type:          Simple
tested-with:         GHC == 8.6.5

common shared-properties
  build-depends: base >=4.12 && < 5
               , containers
               , mtl
  ghc-options: -Wall -Werror -O2

library
  import: shared-properties
  hs-source-dirs:  src
  exposed-modules: HSExpr
                 , Interpreter
                 , Transpiler
  default-language:    Haskell2010

test-suite halyavascript-tests
  import:              shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TranspilerSpec
  build-depends:       halyavascript
                     , hspec
                     , hspec-discover
  default-language:    Haskell2010

executable halyavascript-runner
  import:              shared-properties
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       halyavascript
  default-language:    Haskell2010
