cabal-version:       2.2

name:                hashtable
version:             0.1.0.0
synopsis:            Task 2
description:         Multithreaded hashtable implementation

homepage:            https://github.com/fp-ctd-itmo/hw3-IlyaBizyaev
license:             MIT
license-file:        LICENSE
author:              Ilya Bizyaev
maintainer:          me@ilyabiz.com
copyright:           2020 Ilya Bizyaev

category:            Data Structures
build-type:          Simple
tested-with:         GHC == 8.6.5

common shared-properties
  build-depends: base >=4.12 && < 5
               , vector
               , hashable
               , stm
               , criterion
               , random
               , async
               , deepseq
  ghc-options: -Wall -Werror -O2

library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:     Hashtable
  default-language:    Haskell2010

test-suite hashtable-tests
  import:              shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HashtableSpec
  build-depends:       hashtable
                     , hspec
                     , hspec-discover
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N4"
  default-language:    Haskell2010

benchmark hashtable-bench
  import:              shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       hashtable
  ghc-options:         -threaded -rtsopts -eventlog "-with-rtsopts=-N4"
  default-language:    Haskell2010
